# Sparrow

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  Readme.md  Sparrow.code-workspace  build.ps1  linker-log.txt  myFile.txt  test.ps1  vcpkg.json
.script/: build_sparrow.ps1  test_compilation.ps1  test_executables.ps1  test_paths.ps1
.scripts/: build-sparrow-with-cmake.ps1  move.ps1  test.ps1  test_compilation.ps1
Corth/: CMakeLists.txt
Corth/src/: Corth.cpp  Corth.h  Logging.cpp  Logging.h  Sparrow.cpp  Sparrow.h  main.cpp
Linker/GoLink/: GoLink.htm
Sparrow/: CMakeLists.txt
Sparrow/src/: Logging.cpp  Logging.h  Sparrow.cpp  Sparrow.h  main.cpp
examples/: file.spar  helloworld.spar  write_to_file.spar
test/: Readme.md  test.ps1
